// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar #blockTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      key="TEST_1"
      label="Test 1"
      name="TEST_1"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-2"
      key="TEST_2"
      label="Test 2"
      name="TEST_2"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-3"
      key="TEST_3"
      label="Test 3"
      name="TEST_3"
      onClick={[Function]}
      title={null}
    />
  </ToolbarGroup>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
</div>
`;

exports[`Toolbar #enableHorizontalRule 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      label="―"
      name="HORIZONTAL_RULE"
      onClick={[Function]}
      title="Horizontal line
- - -"
    />
  </ToolbarGroup>
  <ToolbarGroup />
  <ToolbarGroup />
</div>
`;

exports[`Toolbar #enableLineBreak 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      label="↵"
      name="BR"
      onClick={[Function]}
      title="Line break
Shift+Enter"
    />
  </ToolbarGroup>
  <ToolbarGroup />
  <ToolbarGroup />
</div>
`;

exports[`Toolbar #entityTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      key="TEST_1"
      label="Test 1"
      name="TEST_1"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-2"
      key="TEST_2"
      label="Test 2"
      name="TEST_2"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-3"
      key="TEST_3"
      label="Test 3"
      name="TEST_3"
      onClick={[Function]}
      title={null}
    />
  </ToolbarGroup>
  <ToolbarGroup />
</div>
`;

exports[`Toolbar #inlineStyles 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      key="TEST_1"
      label="Test 1"
      name="TEST_1"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-2"
      key="TEST_2"
      label="Test 2"
      name="TEST_2"
      onClick={[Function]}
      title={null}
    />
    <ToolbarButton
      active={false}
      icon="icon-test-3"
      key="TEST_3"
      label="Test 3"
      name="TEST_3"
      onClick={[Function]}
      title={null}
    />
  </ToolbarGroup>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
</div>
`;

exports[`Toolbar #showUndoRedoControls 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup>
    <ToolbarButton
      active={false}
      icon={null}
      label="↺"
      name="undo"
      onClick={[Function]}
      title="Undo
Ctrl+Z"
    />
    <ToolbarButton
      active={false}
      icon={null}
      label="↻"
      name="redo"
      onClick={[Function]}
      title="Redo
Ctrl+Shift+Z"
    />
  </ToolbarGroup>
</div>
`;

exports[`Toolbar empty 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
  <ToolbarGroup />
</div>
`;
